--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,10 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[packages]
+beautifulsoup4 = "*"
+python-craigslist = "*"
+
 [dev-packages]
 pylint = "*"
 
