Save sample Craigslist listing to db

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ beautifulsoup4 = "*"
 python-craigslist = "*"
 SQLAlchemy = "*"
 sqlalchemy-mixins = "*"
+python-dateutil = "*"
 
 [dev-packages]
 pylint = "*"
