Getting commute time to ubc for postings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
     "python.pythonPath": "/home/eric/.local/share/virtualenvs/vancouver-rentals-cujNVZeZ/bin/python",
     "code-runner.executorMap": {
         "python": "pipenv run python"
-    }
+    },
+    "python.testing.pytestArgs": [
+        "test"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true
 }
